--- a/hungreh-test/pom.xml
+++ b/hungreh-test/pom.xml
@@ -11,9 +11,24 @@
 
     <artifactId>hungreh-test</artifactId>
 
-    <!--<properties>-->
-        <!--<my.mock.application.port>8999</my.mock.application.port>-->
-    <!--</properties>-->
+    <properties>
+        <myMockPort>0</myMockPort>
+        <interrupt>false</interrupt>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.jayway.restassured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>2.9.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
@@ -73,9 +88,11 @@
                         <configuration>
                             <name>Starting random-mock</name>
                             <workingDir>${basedir}</workingDir>
-                            <waitForInterrupt>false</waitForInterrupt>
+                            <waitForInterrupt>${interrupt}</waitForInterrupt>
+                            <waitAfterLaunch>5</waitAfterLaunch>
                             <arguments>
                                 <argument>java</argument>
+                                <argument>-Dserver.port=${myMockPort}</argument>
                                 <argument>-cp</argument>
                                 <argument>${project.build.directory}/random-mock/BOOT-INF/classes${path.separator}${project.build.directory}/random-mock/BOOT-INF/lib/*</argument>
                                 <argument>com.testing.MyMockApplication</argument>
@@ -84,18 +101,19 @@
                     </execution>
                     <execution>
                         <id>start service</id>
-                        <phase>pre-integration-test</phase>
+                        <phase>integration-test</phase>
                         <goals>
                             <goal>start</goal>
                         </goals>
                         <configuration>
                             <name>starting hungreh-service</name>
                             <workingDir>${basedir}</workingDir>
+                            <waitAfterLaunch>5</waitAfterLaunch>
                             <arguments>
                                 <argument>java</argument>
                                 <argument>-cp</argument>
                                 <argument>${project.build.directory}/hungreh-service${path.separator}${project.build.directory}/hungreh-service/BOOT-INF/classes${path.separator}${project.build.directory}/hungreh-service/BOOT-INF/lib/*</argument>
-                                <!--<argument>-Dmy.mock.port=${my.mock.application.port}</argument>-->
+                                <argument>-Dmy.passed.mock.port=${passedMockPort}</argument>
                                 <argument>com.testing.HungrehApplication</argument>
                             </arguments>
                         </configuration>
@@ -109,8 +127,41 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>properties-maven-plugin</artifactId>
+                <version>1.0.0</version>
+                <executions>
+                    <execution>
+                        <id>reading property</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>read-project-properties</goal>
+                        </goals>
+                        <configuration>
+                            <files>
+                                <file>${project.basedir}/mock-port.txt</file>
+                            </files>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                        <configuration>
+                            <includes>
+                                <include>**/*IT.class</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
-
-
 </project>
